--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "docs:build": "vuepress build docs",
     "docs:clean-dev": "vuepress dev docs --clean-cache",
     "docs:dev": "vuepress dev docs",
-    "deploy": "bash deploy.sh"
+    "deploy": "bash deploy.sh",
+    "push": "bash push.sh"
   },
   "devDependencies": {
     "vuepress": "^2.0.0-beta.36",
